--- a/final.ipynb
+++ b/final.ipynb
@@ -706,7 +706,7 @@
    "outputs": [],
    "source": [
     "# a = r'C:\\Users\\duphong.hua\\Documents\\phong_document\\git\\resp_test\\test_yolo\\result\\240706E1FKRG.jpg'\n",
-    "# b = model.predict(a,imgsz=IMG_SIZE, conf=CONF_THRESHOLD)\n",
+    "# b = model.predict(a,imgsz=IMG_SIZE, conf=CONF_THRESHOLD) \t\n",
     "# # for result in b:\n",
     "#         # for detection in result.boxes:\n",
     "#                 # print(detection.conf)\n",
